<resources>
    <string name="app_name" translatable="false">Share\'nBook</string>
    <string name="profile_preferences" translatable="false">profile_preferences</string>
    <string name="profile_preferences_copy" translatable="false">profile_preferences_copy</string>
    <string name="username_preferences" translatable="false">username_preferences</string>
    <string name="userData_preferences" translatable="false">userData_preferences</string>
    <string name="bio_pref" translatable="false">bio_pref</string>
    <string name="username_pref" translatable="false">username_pref</string>
    <string name="city_pref" translatable="false">city_pref</string>
    <string name="email_pref" translatable="false">email_pref</string>
    <string name="uid_pref" translatable="false">uid_pref</string>
    <string name="fullname_pref" translatable="false">fullname_pref</string>
    <string name="picture_pref" translatable="false">picture_pref</string>
    <string name="categories_pref" translatable="false">categories_pref</string>
    <string name="default_fullname_heading">Full Name</string>
    <string name="default_username_heading">Username</string>
    <string name="default_fullname">Your full name.</string>
    <string name="default_username">Your username</string>
    <string name="tv_username" translatable="false">\@%1$s</string>
    <string name="default_city_heading">City</string>
    <string name="default_city">City, Country</string>
    <string name="default_email_heading">Email</string>
    <string name="default_email">Your email</string>
    <string name="default_bio_heading">Bio</string>
    <string name="default_bio">Write here your Bio</string>
    <string name="default_picture_path">void</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile_saved">Your profile has been saved!</string>
    <string name="upload_progress">Upload progress:\u0020</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="sign_in_cancelled">Canceled!</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="internal_error">Server Database Error!</string>
    <string name="welcome_msg">Welcome to Share\'nBook!</string>
    <string name="search_hint">Search a book…</string>
    <string name="log_out">Logged Out!</string>
    <string name="loading_dialog">Uploading..</string>
    <string name="network_alert">No internet connection has been detected! Please, an internet connection is required. Do you want to check your internet settings now?</string>
    <string name="to_be_implemented">To be implemented!</string>
    <string name="placeholder" translatable="false">placeholder</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="undo">Cancel</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="contact_user">Contact user</string>
    <string name="show_profile">Show profile</string>
    <string name="return_book">Return book</string>
    <string name="personal_info">PERSONAL INFO</string>
    <string name="preferred_categories">PREFERRED GENRES</string>
    <string name="preferred_categories2">Preferred genres</string>
    <string name="default_isbn_heading" translatable="false">ISBN</string>
    <string name="default_title_heading">Title</string>
    <string name="default_subtitle_heading">Subtitle</string>
    <string name="default_authors_heading">Authors</string>
    <string name="default_publisher_heading">Publisher</string>
    <string name="default_published_date_heading">Published Date</string>
    <string name="default_description_heading">Description</string>
    <string name="default_page_count_heading">Page Count</string>
    <string name="default_categories_heading">Categories</string>
    <string name="default_language_heading">Language</string>
    <string name="default_location_heading">Delivery Location</string>
    <string name="default_rating_heading">Rating</string>
    <string name="default_book_condition_heading">Book conditions</string>
    <string name="default_tags_heading">Tags</string>
    <string name="default_addPhoto_heading">Add Photo</string>
    <string name="default_isbn" translatable="false">a number composed of 10 to 13 digits</string>
    <string name="default_title">Which is the title?</string>
    <string name="default_subtitle">Which is the subtitle, if any?</string>
    <string name="default_authors">Which are the authors?</string>
    <string name="default_publisher">Who published this book?</string>
    <string name="default_published_date">When did it has been published?</string>
    <string name="default_description">Which is the plot?</string>
    <string name="default_page_count">How many pages has this book?</string>
    <string name="default_categories">Which genres it belongs to?</string>
    <string name="default_language">In which language is it written?</string>
    <string name="default_location">Where to deliver it.</string>
    <string name="default_saving_on_firebase">Saving book on cloud…</string>
    <string name="default_book_condition">Striped cover, torn pages…</string>
    <string name="default_tags">Bestseller, recommended for children…</string>
    <string name="default_book_saved">Book saved correctly!</string>
    <string name="default_saving_photo">Saving photo\u0020</string>
    <string name="of_preposition">\u0020of\u0020</string>
    <string name="default_ongoing">\u0020ongoing…</string>
    <string name="max_allowed_book_photo">The maximum number of allowed photo is 5!</string>
    <string name="min_photo_required">There must be at least one photo!</string>
    <string name="edit_book">EDIT</string>
    <string name="undo_borrow_req">CANCEL REQUEST</string>
    <string-array name="book_conditions">
        <item name="book_condition_new">New</item>
        <item name="book_condition_likenew">Like new</item>
        <item name="book_condition_verygood">Very good</item>
        <item name="book_condition_good">Good</item>
        <item name="book_condition_acceptable">Acceptable</item>
        <item name="book_condition_notacceptable">Not acceptable</item>
    </string-array>
    <string-array name="book_categories">
        <item name="book_category_art">Art/Music/Cinema</item>
        <item name="book_category_biography">Biography</item>
        <item name="book_category_comics">Comics</item>
        <item name="book_category_economy">Economy</item>
        <item name="book_category_fantasy">Fantasy</item>
        <item name="book_category_food">Food</item>
        <item name="book_category_hobbie">Hobby</item>
        <item name="book_category_kids">Kids</item>
        <item name="book_category_tech">Tech</item>
        <item name="book_category_education">Education</item>
        <item name="book_category_lgbt">LGBT</item>
        <item name="book_category_health">Health</item>
        <item name="book_category_history">History</item>
        <item name="book_category_entertainment">Entertainment</item>
        <item name="book_category_law">Law</item>
        <item name="book_category_literature">Literature</item>
        <item name="book_category_medicine">Medicine</item>
        <item name="book_category_thriller">Thriller</item>
        <item name="book_category_politics">Politics</item>
        <item name="book_category_religion">Religion</item>
        <item name="book_category_romance">Romance</item>
        <item name="book_category_scifi">Sci-fi</item>
        <item name="book_category_science">Science</item>
        <item name="book_category_sport">Sport</item>
        <item name="book_category_travel">Travel</item>
        <item name="book_category_travel">Other</item>
    </string-array>
    <string name="sa_title">Search results</string>
    <string name="sa_no_results">We cannot find any results!</string>
    <string name="searchbar_placeholder">Search a book...</string>
    <string name="sba_btn_filters">FILTERS</string>
    <string name="sba_btn_order">ORDER</string>
    <string name="fragment_sf_title">Search filters</string>
    <string name="fragmen_sf_msg">Here you can apply filters to your search</string>
    <string name="filter_distance">Filter by distance</string>
    <string name="fragment_sf_address_hint">Type an address and select a range</string>
    <string name="filter_distance_message">Please, insert the city or area in which you want to search for books and specify a range:</string>
    <string name="filter_distance_address">Delivery place</string>
    <string name="filter_distance_range">Range %1$d KM</string>
    <string name="address_empty">This field is mandatory!</string>
    <string name="fragment_sf_et_conditions">Conditions</string>
    <string name="fragment_sf_et_categories">Categories</string>
    <string name="fragment_sf_et_author">Author</string>
    <string name="fragment_sf_et_author_hint">Type here first name and last name of the author</string>
    <string name="fragment_sf_et_tags">Tags</string>
    <string name="fragment_sf_et_tags_hint">Type here the tags to use as filters</string>
    <string name="title_profile">Profile</string>
    <string name="title_showcase">Showcase</string>
    <string name="title_shareBook">Share a book</string>
    <string name="title_search">Search</string>
    <string name="title_logout">Logout</string>
    <string name="title_mybooks">My books</string>
    <string name="fullname_key">fullname</string>
    <string name="username_key">username</string>
    <string name="city_key">city</string>
    <string name="bio_key">bio</string>
    <string name="email_key">email</string>
    <string name="userPicture_key">picture_uri</string>
    <string name="categories_key" translatable="false">categories</string>
    <string name="fullname_copy_key" translatable="false">fullname_copy</string>
    <string name="username_copy_key" translatable="false">username_copy</string>
    <string name="city_copy_key" translatable="false">city_copy</string>
    <string name="bio_copy_key" translatable="false">bio_copy</string>
    <string name="email_copy_key" translatable="false">email_copy</string>
    <string name="categories_copy_key" translatable="false">categories_copy</string>
    <string name="userPicture_copy_key">user_picture_copy</string>
    <string name="changed_photo_flag_key">changed_photo_flag</string>
    <string name="photo_dialog_item_camera">Camera</string>
    <string name="photo_dialog_item_gallery">Gallery</string>
    <string name="photo_dialog_title">Add image</string>
    <string name="photo_dialog_select_gallery_method_title">Select method</string>
    <string name="exit_request_title">Edit exit</string>
    <string name="exit_rationale">Do you really want to exit? Any modification will be lost!</string>
    <string name="complete_profile_title">Welcome!</string>
    <string name="complete_profile_rational">Please, complete your profile before continuing.</string>
    <string name="name_bad_format_rationale">Please, your full name must contains just letters separated by one space. Initial capital letter.</string>
    <string name="name_length_format_rationale">Your full name must have at least 5 characters</string>
    <string name="bad_email"> Bad email format!</string>
    <string name="email_bad_format_rationale">If you modify your email, do not leave it empty please!</string>
    <string name="username_bad_lenght_rationale">Please, your username must have from 3 to 12 characters!</string>
    <string name="username_already_exists">This username is already taken! Please use a different one</string>
    <string name="city_bad_lenght_rationale">Please, city name should be at least 2 characters</string>
    <string name="nav_my_books">My books</string>
</resources>