<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <item
        android:id="@+id/navigation_showcase"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_showcase" /> -->
    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/title_logout" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_135dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_shareBook"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_shareBook" />

    <item
        android:id="@+id/navigation_myBook"
        android:icon="@drawable/ic_book_64dp"
        android:title="@string/nav_my_books" />


</menu>
